minor fixes and updated according intellij 2026.1